--- a/ch5part1.ipynb
+++ b/ch5part1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "def printlst(l):\n",
     "\taverage = sum(l) / len(l) \n",
@@ -138,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "22\n"
      ]
     }
    ],
@@ -171,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "22\n"
      ]
     }
    ],
@@ -199,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,11 +244,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
    "source": [
-    "# complete the code to run the main function\n"
+    "# complete the code to run the main function\n",
+    "def \tgetinput():\n",
+    "\tval = int(input())\n",
+    "\treturn val\n",
+    "\n",
+    "def \tmain():\n",
+    "\tuserval = getinput()\n",
+    "\tprint (userval)\n",
+    " \n",
+    "main() #added this line calling main() function"
    ]
   },
   {
@@ -261,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "22\n"
      ]
     }
    ],
@@ -278,7 +306,10 @@
     "\treturn val\n",
     "\n",
     "userval = getinput()\n",
-    "print (userval)\n"
+    "print (userval)\n",
+    "\n",
+    "#This code is working without calling the main() function because the main() function was never defined in this code.\n",
+    "#This code is working because it defines a function called getinput() and getinput() is called in line 5. "
    ]
   },
   {
@@ -2545,7 +2576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
