--- a/ch5part1.ipynb
+++ b/ch5part1.ipynb
@@ -339,9 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
    "source": [
     "def \tgetinput():\n",
     "\tval = int(input())\n",
@@ -359,9 +367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "def getsum(n1, n2):\n",
     "\tval = n1 + n2\n",
@@ -404,9 +420,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of parameter n1 and n2 are 22 and 23\n",
+      "The value of a and b are 0 and 0\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def getinput(n1, n2):\n",
@@ -429,7 +454,7 @@
    "source": [
     "### <mark> Explain why both values are 0 </mark>\n",
     "\n",
-    "- You can use this markdown box to answer to the question"
+    "- When defining getinput(), you don't need to include n1 and n2 as parameters in the function, because they are defined in the function as inputs, not as something passed to the function. It just makes it so that when you call getinput() down the line, you have to include useless arguments that don't actually get input. Also, when defining main(), you already defined a=0 and b=0. Passing those as arguments to getinput() in main() does not change their values, so both remain equal to 0, as they were defined previously."
    ]
   },
   {
@@ -463,9 +488,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of parameter l1  ['2', '3', '4']\n",
+      "The value of list1 ['2', '3', '4']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def getinput(l1):\n",
@@ -480,7 +514,7 @@
     "\tprint (\"The value of list1\", list1);\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "\tmain()\n"
+    "\tmain()"
    ]
   },
   {
@@ -488,7 +522,7 @@
    "metadata": {},
    "source": [
     "## Answer the question 2.2 here\n",
-    "- You can use Markdown syntax to make the MarkDown Text"
+    "- Lists are mutable objects, unlike integers, which is why this problem is different from the previous problem. Because lists are mutable, you can use list1 as an argument in getinput() and the lines that append an input to the parameter in getinput() will change values in list1."
    ]
   },
   {
@@ -520,9 +554,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of num1 and num2 are 12 and 13\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def getinput():\n",
@@ -543,7 +585,7 @@
    "metadata": {},
    "source": [
     "## Answer the question 2.3 here\n",
-    "- You can use Markdown syntax to make the MarkDown Text"
+    "- Yes, this function, getinput(), returns multiple values. It returns two values. "
    ]
   },
   {
@@ -560,9 +602,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total is 30\n",
+      "Total is 0\n"
+     ]
+    }
+   ],
    "source": [
     "def getsum(n1, n2):\n",
     "    total = n1 + n2\n",
@@ -584,7 +635,37 @@
    "metadata": {},
    "source": [
     "## Answer the question 2.4 here\n",
-    "- You can use Markdown syntax to make the MarkDown Text"
+    "- The variable total in getsum() is local only to getsum(). The variable total in main() is only local to main(), and is defined as total=0. They are not the same variable. By adding a return statement to getsum() and setting the local variable total in main() to call getsum() with arguments num1 and num2, we can get the correct output. Without a return statement in getsum(), and even by redefining total in main(), it would return None because you need a return statement in getsum() to actually store total. In order to print the same thing as the print statement in getsum(), you could write the code this way instead: (see below added code cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total is 30\n",
+      "Total is 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def getsum(n1, n2):\n",
+    "    total = n1 + n2\n",
+    "    print(f'Total is {total}')\n",
+    "    return total\n",
+    "\n",
+    "def main():\n",
+    "    num1 = 10\n",
+    "    num2 = 20\n",
+    "    total = getsum(num1, num2)\n",
+    "    print(f'Total is {total}')\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
