--- a/ch5part1.ipynb
+++ b/ch5part1.ipynb
@@ -745,22 +745,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mylst =  [100, 200, 300]\n"
+     ]
+    }
+   ],
    "source": [
     "def setListValues(first_element, second_element, third_element):\n",
     "    mylst=[]\n",
     "    mylst.append(first_element)\n",
     "    mylst.append(second_element)\n",
     "    mylst.append(third_element)\n",
+    "    return mylst\n",
     "   \n",
     "def main():\n",
-    "    setListValues(third_element= #complete value, \n",
-    "                  second_element= # complete value, \n",
-    "                  first_element= # complete value )\n",
-    "            )\n",
-    "    print(mylst)\n",
+    "    print('mylst = ', setListValues(third_element= 300,  \n",
+    "                      second_element= 200, \n",
+    "                      first_element= 100\n",
+    "            ))\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()\n",
@@ -782,7 +790,7 @@
    "metadata": {},
    "source": [
     "### Your Answer :\n",
-    "---"
+    "---Yes, the list in setListValues() is passed by reference to main. "
    ]
   },
   {
