--- a/ch5part1.ipynb
+++ b/ch5part1.ipynb
@@ -830,9 +830,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before call myfunction1  100\n",
+      "Inside the function  111\n",
+      "After call myfunction1  111\n"
+     ]
+    }
+   ],
    "source": [
     "gvar = 100\n",
     "\n",
@@ -858,12 +868,14 @@
    "source": [
     "#### <p style=\"font-family: Arial; font-size:1.4em; background-color: yellow; color:black;\"> Problem #4.1 </p>\n",
     "\n",
-    "####  Explain the printed the value of \"gvar\"  \n"
+    "####  Explain the printed the value of \"gvar\"  \n",
+    "\n",
+    "- gvar is a global variable defined outside of any functions, and can therefore be used anywhere in the program, including inside of functions. in main(), global gvar is printed on its own. Then, it is printed after calling myfunction1(), which adds 1 to global gvar, as is stated in myfunction1(). There does not have to be a return statement because global gvar is already defined outside the function. Lastly, global gvar is incremented by 1 again inside main and is printed again. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -901,12 +913,14 @@
    "source": [
     "#### <p style=\"font-family: Arial; font-size:1.4em; background-color: yellow; color:black;\"> Problem #4.2 </p>\n",
     "\n",
-    "####  Explain the printed the value of \"gvar\" is 100 even though it has been increased by 1 in the myfuntion1() \n"
+    "####  Explain the printed the value of \"gvar\" is 100 even though it has been increased by 1 in the myfuntion1() \n",
+    "\n",
+    "- myfunction1() does not call on global gvar, but rather defines a local variable also called gvar. main() uses global gvar, and prints it twice. Since global gvar and gvar local to myfunction1 are not the same variable, calling myfunction1() inside main() does not increment global gvar. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -942,14 +956,37 @@
     "#### <p style=\"font-family: Arial; font-size:1.4em; background-color: yellow; color:black;\"> Problem #4.3 </p>\n",
     "\n",
     "####  Explain why this code encounters error\n",
-    "####  Fix the Errors and show the complete code \n"
+    "####  Fix the Errors and show the complete code \n",
+    "\n",
+    "- The first code cell produced an error called \"UnboundLocalError: cannot access local variable 'gvar' where it is not associated with a value\". This means that gvar local to myfunction1() was not defined, and you can't increment a variable that is not defined. In the second code cell, I added just one line to def myfunction1(), where I brought in global gvar. Therefore, the gvar inside myfunction1() is no longer an undefined local variable, and refers to the gloabal gvar instead. As global gvar is also used in main(), it now refers to the same variable and is incremented. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before call myfunction1  100\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'gvar' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[73], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m \t\u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAfter call myfunction1 \u001b[39m\u001b[38;5;124m'\u001b[39m, gvar)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m---> 13\u001b[0m \tmain()\n",
+      "Cell \u001b[1;32mIn[73], line 9\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mglobal\u001b[39;00m gvar\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBefore call myfunction1 \u001b[39m\u001b[38;5;124m'\u001b[39m, gvar)\n\u001b[1;32m----> 9\u001b[0m myfunction1()\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAfter call myfunction1 \u001b[39m\u001b[38;5;124m'\u001b[39m, gvar)\n",
+      "Cell \u001b[1;32mIn[73], line 4\u001b[0m, in \u001b[0;36mmyfunction1\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmyfunction1\u001b[39m():\n\u001b[1;32m----> 4\u001b[0m     gvar \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'gvar' where it is not associated with a value"
+     ]
+    }
+   ],
    "source": [
     "gvar = 100\n",
     "\n",
@@ -968,11 +1005,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before call myfunction1  100\n",
+      "After call myfunction1  101\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fix the errors and show the complete code here\n"
+    "gvar = 100\n",
+    "\n",
+    "def myfunction1():\n",
+    "    global gvar   #just added this line\n",
+    "    gvar += 1\n",
+    "\n",
+    "def main():\n",
+    "\tglobal gvar\n",
+    "\tprint ('Before call myfunction1 ', gvar)\n",
+    "\tmyfunction1()\n",
+    "\tprint ('After call myfunction1 ', gvar)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "\tmain()"
    ]
   },
   {
