--- a/ch5part1.ipynb
+++ b/ch5part1.ipynb
@@ -1074,9 +1074,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Alice!\n",
+      "Hello, Bob!\n",
+      "Hello, Charlie!\n"
+     ]
+    }
+   ],
    "source": [
     "def greet(*args):\n",
     "    for name in args:\n",
@@ -1094,9 +1104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number = 10\n",
     "type(number)"
@@ -1121,15 +1142,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "(10, 20, 30)\n",
+      "10\t<class 'int'>\n",
+      "20\t<class 'int'>\n",
+      "30\t<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "def myfunction(*values):\n",
     "    print(type(values))\n",
     "    print (values)\n",
     "    for v in values:\n",
     "        print (v, end='\\t')\n",
+    "        print (type(v))        #added this line to find data type of values in the function\n",
     "        \n",
     "n1 = 10; n2 = 20; n3=30;\n",
     "myfunction(n1, n2, n3)"
@@ -1140,7 +1174,8 @@
    "metadata": {},
    "source": [
     "#### <mark> Type your answer here </mark>\n",
-    "- What is the data type of values in the function ?"
+    "- What is the data type of values in the function ?\n",
+    "--- They are integers."
    ]
   },
   {
@@ -1156,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1165,8 +1200,8 @@
      "text": [
       "<class 'list'> It has been printed in the main()\n",
       "<class 'tuple'> It has been printed in the funtion myfuntion()\n",
-      "([10, 20, 30],)\n",
-      "[10, 20, 30]\t\n"
+      "The value of args is  ([10, 20, 30],)\n",
+      "[10, 20, 30]\t \n"
      ]
     }
    ],
@@ -1192,6 +1227,12 @@
    "source": [
     "#### <mark> Type your answer here </mark>\n",
     "\n",
+    "- The data type printed in main() is a list.\n",
+    "- The data type printed in myfunction() is a tuple.\n",
+    "- The number of elements in the tuple args depends on how many arguments are given when the function is called. That is the point. \n",
+    "- The data type of an element in the tuple args depends on the data type of the argument passed to the function. In this case it is an integer.\n",
+    "- There are 3 elements in the list values. That means that the loop in myfunction() iterated 3 times.  \n",
+    "\n",
     "### Are the two printed data types same? \n",
     "\n",
     "- What is the data type printed in main()?\n",
@@ -1214,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1254,6 +1295,10 @@
    "source": [
     "#### <mark> Type your answer here </mark>\n",
     "\n",
+    "- There are no print statements in main()\n",
+    "- The datatype printed in myfunction() both times it is called is a tuple. This is because the arbitrary arguments are all stored as elements in a tuple, whether that element is a list, an integer, etc. \n",
+    "- There is one element in the first tuple, the entire list \"values\", as one argument to myfunction(), therefore iterating the for loop only one time. The second part of main(), where myfunction(val1, val2, val3), has 3 arguments, iterates the loop in myfunction() 3 times. \n",
+    "\n",
     "### Are the two printed data types same? \n",
     "\n",
     "- What is the data type printed in main()?\n",
@@ -1274,9 +1319,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "[10, 20, 30]\t\n",
+      "<class 'list'>\n",
+      "10\t20\t30\t"
+     ]
+    }
+   ],
    "source": [
     "def myfn1(*values):\n",
     "    print (type(values))            \n",
@@ -1303,7 +1359,11 @@
     "### Are the two printed data types same? \n",
     "\n",
     "- Are the printed values are same? If not, why? \n",
-    "***"
+    "***\n",
+    "- No, because: \n",
+    "- myfn1() uses arbitrary arguments, and sees the list 'values' as one argument. It takes the list 'values' as a single argument and stores that single element as an element in a tuple. It prints the datatype of tuple, because in this case, values is a tuple containing an arbitrary number of positional arguments. When we print v when myfn1() is called, it prints the list as the first element of the tuple. \n",
+    "- myfn2() does not use arbitrary arguments, and takes each element of the list values into consideration. It prints the datatype as a list. The for loop iterates 3 times, once over each element in the list values that is used as an argument to myfn2(), and prints them each separately in the output separated by a '\\t'\n",
+    "\n"
    ]
   },
   {
@@ -1317,9 +1377,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30]\n",
+      "10 20 30\n"
+     ]
+    }
+   ],
    "source": [
     "# check out the difference between two print statements\n",
     "numbers = [10, 20, 30]\n",
@@ -1340,9 +1409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20 30\n",
+      "[10, 20, 30]\n",
+      "10 20 30 \n"
+     ]
+    }
+   ],
    "source": [
     "def myfn1(n1, n2, n3):\n",
     "    print (n1, n2, n3)\n",
@@ -1363,6 +1442,10 @@
    "metadata": {},
    "source": [
     "#### <mark> Type your answer here </mark>\n",
+    "\n",
+    "- Yes, the printed values are the same.\n",
+    "- It is possible to call myfn1() if you have the correct number of arguments. Using the * operator unpacking the list 'numbers' and using '*numbers' as the argument when calling myfn1() makes it so that there are the correct number of arguments when calling myfn1(), since the list 'numbers' has 3 elements and myfn1() has 3 parameters.\n",
+    "- It is possible to call myfn2() no matter how many elements are in the argument, because it will iterate over each element with a for loop.\n",
     "\n",
     "### Are the two printed output same? \n",
     "\n",
@@ -1415,9 +1498,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'> The type of kwargs\n",
+      "True <--- If this is true, kwargs is a dictionary \n",
+      "first -> California\n",
+      "mid -> Community\n",
+      "last -> College\n"
+     ]
+    }
+   ],
    "source": [
     "def myFun(**kwargs): \n",
     "\tprint (type(kwargs), 'The type of kwargs')\n",
@@ -1443,8 +1538,8 @@
    "metadata": {},
    "source": [
     "#### <mark> Type your answer here </mark>\n",
-    "- \n",
-    "-\n",
+    "- It is a dictionary\n",
+    "- print(isinstance(kwargs, dict)) output was True. \n",
     "-\n",
     "***"
    ]
@@ -1463,15 +1558,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mid -> Community\n",
+      "last -> College\n",
+      "first -> California\n"
+     ]
+    }
+   ],
    "source": [
     "def myFun(**kwargs): \n",
     "\tfor key, value in kwargs.items():\n",
     "\t\tprint (\"%s -> %s\" %(key, value))\n",
     "\n",
-    "myFun( # Complete yout code )\n"
+    "myFun(mid ='Community', last='College', first ='California')\n"
    ]
   },
   {
@@ -1479,7 +1584,7 @@
    "metadata": {},
    "source": [
     "#### <mark> Type your answer here </mark>\n",
-    "- \n",
+    "- The output ran the myFun() function on the three key-value pairs as arguments. The function printed the key and value pairs with a '->' in between them, as defined in the print statement in the function. It printed them in order of arguments to the function. The first key was called 'mid' and was printed first. \n",
     "-\n",
     "-\n",
     "***"
@@ -1497,9 +1602,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "mid -> Pear\n",
+      "last -> Orange\n",
+      "Apple\n",
+      "mid -> Pear\n",
+      "last -> Orange\n"
+     ]
+    }
+   ],
    "source": [
     "def myFun(first, **kwargs):\n",
     "\tprint (first)\n",
@@ -1553,9 +1671,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arg1: Java\targ2: C++\targ3: Python\n",
+      "arg1: Java\targ2: C++\targ3: Python\n",
+      "arg1: Java\targ2: C++\targ3: Python\n",
+      "arg1: Java\targ2: C++\targ3: Python\n"
+     ]
+    }
+   ],
    "source": [
     "def myFun(arg1, arg2, arg3):\n",
     "\tprint(\"arg1:\", arg1, end='\\t')\n",
@@ -1587,9 +1716,11 @@
     "#### <mark> Type your answer here </mark>\n",
     "\n",
     "### All the output are same? Why? Explain it.\n",
-    "-\n",
-    "-\n",
-    "-\n",
+    "- Yes, all outputs look the same, but are achieved different ways. \n",
+    "- The first calls myFun() with three argument strings. The function prints the string \"arg1: \", \"arg2: \", and \"arg3: \" in front of each argument in the output.\n",
+    "- The second time myFun() is called under #call 1 assigns the different string arguments to different parameters and achieves the same thing.\n",
+    "- In #Call 2, the program uses (*args) to unpack the tuple assigned to args variable, and passes each element to myFun(), achieving the same output once again. \n",
+    "- In #Call 3, the program defines kwargs variable as a dictionary of 3 key-value pairs. It runs myFun() on (**kwargs), which takes the keys and matches to the parameters in the function, once again printing the same output. \n",
     "\n",
     "***"
    ]
@@ -1622,9 +1753,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "6\n",
+      "[4]\n"
+     ]
+    }
+   ],
    "source": [
     "def retEven(lst):\n",
     "\tevenlst = []\n",
