--- a/ch5part1.ipynb
+++ b/ch5part1.ipynb
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1944,14 +1944,25 @@
    "metadata": {},
    "source": [
     "#### What is the type of \"myiter\"? \n",
-    "- Your answer: 👉"
+    "- Your answer: 👉  The output of the code cell states that it is a list iterator. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list_iterator"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mylst = [10, 20, 30]\n",
     "myiter = iter(mylst)\n",
@@ -1965,14 +1976,25 @@
    "source": [
     "#### What is the result of the following code?\n",
     "``` myiter.__next__() ``` \n",
-    "- Your answer: Here 👉"
+    "- Your answer: Here 👉  the __next__() function returns the next item of the list, which is 10. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myiter.__next__()"
    ]
@@ -1986,14 +2008,23 @@
     "    myiter.__next__()  \n",
     "    myiter.__next__() \n",
     "``` \n",
-    "- Your answer: Here 👉 "
+    "- Your answer: Here 👉 running this line twice gets the next two elements of the list as outputs. 20 and 30."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "print (myiter.__next__())\n",
     "print (myiter.__next__())"
@@ -2007,14 +2038,26 @@
     "``` \n",
     "    myiter.__next__()  \n",
     "``` \n",
-    "- Your answer: Here  👉"
+    "- Your answer: Here  👉 It returns a \"StopIteration:\" exception because there are no more items in the list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[119], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m (myiter\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__next__\u001b[39m())\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "print (myiter.__next__())"
    ]
@@ -2032,9 +2075,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "mylst = [1,2,3]\n",
     "itobj= iter(mylst)\n",
@@ -2095,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2215,7 @@
    "metadata": {},
    "source": [
     "### Compare two loop structures. What is the difference between two loops to use the iterator for traversing all the elements in the list?\n",
-    "#### Your Answer: Here 👉 "
+    "#### Your Answer: Here 👉 The for-loop automatically stops when it has iterated over every element in the list. The while-loop has to include a way to stop iterating when there are no more elements to interate over to avoid an error. "
    ]
   },
   {
@@ -2229,10 +2282,31 @@
     "gen = mygen()\n",
     "print (type(gen))\n",
     "```\n",
-    "##### Your answer: Here 👉\n",
+    "##### Your answer: Here 👉 The output of the code cell states that gen is a generator. \n",
     "\n",
     "\n",
     "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'generator'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mygen():\n",
+    "    yield 1\n",
+    "\n",
+    "gen = mygen()\n",
+    "print (type(gen))"
    ]
   },
   {
@@ -2251,10 +2325,37 @@
     "print (next(gen))\n",
     "print (next(gen))\n",
     "```\n",
-    "##### Your answer: Here 👉\n",
+    "##### Your answer: Here 👉  Generators generate values from yield statements. The value of next(gen) is whatever value is next yielded value. \n",
     "\n",
     "\n",
     "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mygen():\n",
+    "    yield 10\n",
+    "    yield 20\n",
+    "    yield 30\n",
+    "\n",
+    "gen = mygen()\n",
+    "print (next(gen))\n",
+    "print (next(gen))\n",
+    "print (next(gen))"
    ]
   },
   {
@@ -2272,10 +2373,34 @@
     "for v in gen:\n",
     "    print (v, end='\\t')\n",
     "```\n",
-    "##### Your answer: Here 👉\n",
+    "##### Your answer: Here 👉 gen is a generator. gen iterates for each time there is a yield, which is 3 times in mygen(). Using a for loop, each value generated is printed followed by a tab space. \n",
     "\n",
     "\n",
     "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\t20\t30\t"
+     ]
+    }
+   ],
+   "source": [
+    "def mygen():\n",
+    "    yield 10\n",
+    "    yield 20\n",
+    "    yield 30\n",
+    "\n",
+    "gen = mygen()\n",
+    "for v in gen:\n",
+    "    print (v, end='\\t')"
    ]
   },
   {
@@ -2296,10 +2421,39 @@
     "    except StopIteration:\n",
     "        break\n",
     "```\n",
-    "##### Your answer: Here 👉\n",
+    "##### Your answer: Here 👉   the value of the last next(gen) is 30, because that is the last line in the mygen() function that yields a value for the generator. \n",
     "\n",
     "\n",
     "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mygen():\n",
+    "    yield 10\n",
+    "    yield 20\n",
+    "    yield 30\n",
+    "\n",
+    "gen = mygen()\n",
+    "while True:\n",
+    "    try:\n",
+    "        print (next(gen))\n",
+    "    except StopIteration:\n",
+    "        break"
    ]
   },
   {
@@ -2367,9 +2521,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 --\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "def findEvenNumber(lst):\n",
     "\tfor v in lst:\n",
@@ -2406,9 +2572,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def fibo(N):\n",
@@ -2449,9 +2624,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P, y, t, h, n,  , P, r, g, r, m, m, n, g, "
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def consonant(string):\n",
@@ -2485,13 +2668,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\t2\t3\t4\t5\t"
+     ]
+    }
+   ],
    "source": [
     "def halfoflist(mylst):\n",
     "    # complete your code\n",
     "    # return the generator that contains the first half of the list\n",
+    "    halfway = len(mylst)//2\n",
+    "    for i in range(halfway):\n",
+    "        yield mylst[i]\n",
     "\n",
     "def main():\n",
     "    numbers = [1,2,3,4,5,6,7,8,9,10]\n",
@@ -2521,16 +2715,36 @@
     "</style>\n",
     "<p> Make a function that returns the generator containing elements greater than their immediate left. </p>\n",
     "- Example numbers = [1, 3, 2, 4, 5, 0] <br>\n",
-    "- Generator for [3,4,5]\n"
+    "- Generator for [3,4,5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\t4\t5\t"
+     ]
+    }
+   ],
    "source": [
-    "### Code your program here"
+    "### Code your program here\n",
+    "def greater_than_immediate_left(mylst):\n",
+    "    for i in range(1, len(mylst)):\n",
+    "        if mylst[i] > mylst[i-1]:\n",
+    "            yield mylst[i]\n",
+    "            \n",
+    "def main():\n",
+    "    numbers = [1, 3, 2, 4, 5, 0]\n",
+    "    mygen = greater_than_immediate_left(numbers)\n",
+    "    for v in mygen:\n",
+    "        print(v, end='\\t')\n",
+    "        \n",
+    "main()"
    ]
   },
   {
@@ -2594,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2622,9 +2836,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "squared = lambda x : x * x\n",
     "\n",
@@ -2640,9 +2862,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "greater = lambda x, y : x > y \n",
     "\n",
@@ -2659,9 +2890,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "400\n"
+     ]
+    }
+   ],
    "source": [
     "def retlam( value):\n",
     "\treturn lambda parameter : parameter * value\n",
@@ -2682,9 +2922,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[52, 89, 37, 26, 31]\n",
+      "52\n",
+      "89\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -2699,9 +2949,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "gr = lambda x,y: x if x > y else y\n",
     "print (gr(10,20))\n"
@@ -2709,9 +2967,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "total = 0\n",
     "def addValue(value):\n",
@@ -2753,19 +3020,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.5\n"
+      "5.5\n"
      ]
     }
    ],
    "source": [
     "# Complete your code Here. Lambda Function\n",
+    "def getavg(numbers):\n",
+    "    average = lambda lst: sum(lst) / len(lst)\n",
+    "    return average(numbers)\n",
+    "\n",
     "\n",
     "numbers = [1,2,3,4,5,6,7,8,9,10]\n",
     "result = getavg(numbers)\n",
@@ -2794,11 +3065,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5]\n"
+     ]
+    }
+   ],
    "source": [
-    "getGreater = #### Complete your Lambda Function Here. Not Regular Function.  \n",
+    "getGreater = lambda lst: [lst[i] for i in range(len(lst) - 1) if lst[i] > lst[i+1]]\n",
     "\n",
     "numbers = [1,3,2,4,5,0]\n",
     "result = getGreater(numbers)\n",
@@ -2827,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -2839,7 +3118,7 @@
     }
    ],
    "source": [
-    "compareTwoList = lambda ## Complete your code HERE \n",
+    "compareTwoList = lambda lst1, lst2: lst1 if len(lst1) > len(lst2) else lst2\n",
     "\n",
     "n1 = [1,3,2,4,5,0]\n",
     "n2 = [1,2,3]\n",
